# zenvo

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml  verify.yml
homebrew/: zenvo.rb
npm/: README.md  install.js  package.json
src/: lib.rs  main.rs
src/checks/: dependencies.rs  frameworks.rs  lockfile_checks.rs  mod.rs  toolchain.rs
src/commands/: clean.rs  config.rs  diff.rs  doctor.rs  init.rs  lock.rs  mod.rs  repair.rs  resolve.rs  status.rs  upgrade.rs  verify.rs  versions.rs
src/config/: mod.rs
src/lockfile/: mod.rs
src/mcp/: handlers.rs  mod.rs
src/output/: mod.rs
src/repair/: mod.rs
src/utils/: mod.rs
tests/: check_tests.rs  config_tests.rs  integration_tests.rs  mcp_tests.rs
